# yt-metrics-cli

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  channels.example.yml  pyproject.toml  release-please-config.json
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
site/: astro.config.mjs  package-lock.json  package.json
site/src/content/docs/: getting-started.md  index.mdx
src/: __init__.py  analyzer.py  config.py  main.py  metrics.py  transcript.py
src/exporters/: __init__.py  csv_exporter.py  readme_exporter.py  text_exporter.py  url_exporter.py
tasks/: todo.md
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_exporters.py  test_metrics.py  test_transcript.py
